i18n update from Transifex

--- a/languagetool-language-modules/ast/src/main/resources/org/languagetool/MessagesBundle_ast.properties
+++ b/languagetool-language-modules/ast/src/main/resources/org/languagetool/MessagesBundle_ast.properties
@@ -25,6 +25,10 @@ checkDone = Comprobaci\u00f3n fecha, atop\u00e1ronse {0} problemes potenciales
 
 checkText = &Comprobar testu
 
+# checkTextShortDesc = Check Text
+
+# checkTextLongDesc = Check Text
+
 correctionMessage = Correici\u00f3n\:
 
 cs = Checu
@@ -149,6 +153,10 @@ guiMenuHelp = A&yuda
 guiMenuHide = &Minimizar na bandexa'l sistema
 
 guiMenuOpen = &Abrir...
+
+# guiMenuOpenShortDesc = Open File
+
+# guiMenuOpenLongDesc = Open File
 
 guiMenuOptions = Opcione&s...
 
@@ -288,3 +296,41 @@ https_server_start_failed_unknown_reason = El sirvidor HTTPS de LanguageTool nun
 tray_menu_enable_server = Executar sirvidor HTTP
 
 tray_tooltip_server_running = LanguageTool (sirvidor HTTP execut\u00e1ndose)
+
+# guiMenuEdit = &Edit
+
+# guiMenuGrammar = &Text Checking
+
+# guiMenuSave = &Save
+
+# guiMenuSaveShortDesc = Save File
+
+# guiMenuSaveLongDesc = Save File
+
+# guiMenuSaveAs = Save &As
+
+# guiMenuSaveAsShortDesc = Save File As
+
+# guiMenuSaveAsLongDesc = Save File As
+
+# guiMenuCut = Cut
+
+# guiMenuCopy = Copy
+
+# guiMenuPaste = Paste
+
+# guiMenuSelectAll = Select All
+
+# guiMenuUndo = &Undo
+
+# guiMenuRedo = &Redo
+
+# autoCheckText = AutoCheck
+
+# autoCheckTextShortDesc = AutoCheck
+
+# autoCheckTextLongDesc = AutoCheck
+
+# guiActivateRule = Activate Rule
+
+# guiMore = More...
