--- a/languagetool-language-modules/br/src/main/resources/org/languagetool/MessagesBundle_br.properties
+++ b/languagetool-language-modules/br/src/main/resources/org/languagetool/MessagesBundle_br.properties
@@ -13,7 +13,7 @@ ca = Katalaneg
 
 category_case = Pennlizherenno\u00f9
 
-category_false_friend = Falsmignoned
+category_false_friend = Falsvignoned
 
 category_grammar = Yezhadur
 
@@ -24,6 +24,10 @@ category_typo = Fazi bizskriva\u00f1 posupl
 checkDone = Echuet eo gwiria\u00f1 an trao\u00f9. Niver a gudenno\u00f9 kavet \: {0}
 
 checkText = &Gwiria\u00f1 an destenn
+
+checkTextShortDesc = Gwiria\u00f1 an destenn
+
+checkTextLongDesc = Gwiria\u00f1 an destenn
 
 correctionMessage = Reizhadenn \:
 
@@ -75,7 +79,7 @@ desc_spelling_short = Fazi reizhskriva\u00f1
 
 # 3607406 +
 
-# desc_whitespace_before_punctuation = Use of whitespace before colon, semicolon and percentage.
+desc_whitespace_before_punctuation = Ober gant un esaouenn dirak an daoubiko\u00f9, ar piko\u00f9-skej hag an dregantado\u00f9.
 
 # 3607406 -
 
@@ -150,6 +154,10 @@ guiMenuHide = Kuzhat e barrenn an ostilho\u00f9
 
 guiMenuOpen = &Digeri\u00f1...
 
+guiMenuOpenShortDesc = Digeri\u00f1 ar restr
+
+guiMenuOpenLongDesc = Digeri\u00f1 ar restr
+
 guiMenuOptions = Di&barzhio\u00f9...
 
 guiMenuQuit = &Kuitaat
@@ -211,11 +219,11 @@ no_space_before_dot = Esaouenn ebet dirak ur pik
 
 # 3607406 +
 
-# no_space_before_colon = Don't put a space before the colon
+no_space_before_colon = Arabat lakaat un esaouenn dirak an daoubik
 
-# no_space_before_semicolon = Don't put a space before the semicolon
+no_space_before_semicolon = Arabat lakaat un esaouenn dirak ar piko\u00f9-skej
 
-# no_space_before_percentage = Don't put a space before the percentage
+no_space_before_percentage = Arabat lakaat un esaouenn dirak an dregantado\u00f9
 
 # 3607406 -
 
@@ -288,3 +296,41 @@ https_server_start_failed_unknown_reason = N'eus ket bet gallet deraoui\u00f1 se
 tray_menu_enable_server = Lakaat ar servijer HTTP da drei\u00f1
 
 tray_tooltip_server_running = LanguageTool (servijer HTTP o trei\u00f1)
+
+guiMenuEdit = &Aoza\u00f1
+
+guiMenuGrammar = &O wiria\u00f1 an destenn
+
+guiMenuSave = &Enrolla\u00f1
+
+guiMenuSaveShortDesc = Enrolla\u00f1 ar restr
+
+guiMenuSaveLongDesc = Enrolla\u00f1 ar restr
+
+guiMenuSaveAs = Enrolla\u00f1 &Evel
+
+guiMenuSaveAsShortDesc = Enrolla\u00f1 ar restr evel
+
+guiMenuSaveAsLongDesc = Enrolla\u00f1 ar restr evel
+
+guiMenuCut = Troc'ha\u00f1
+
+guiMenuCopy = Eila\u00f1
+
+guiMenuPaste = Pega\u00f1
+
+guiMenuSelectAll = Diuz pep tra
+
+guiMenuUndo = &Dizober
+
+guiMenuRedo = &Adober
+
+autoCheckText = EmWiria\u00f1
+
+autoCheckTextShortDesc = EmWiria\u00f1
+
+autoCheckTextLongDesc = EmWiria\u00f1
+
+# guiActivateRule = Activate Rule
+
+# guiMore = More...
