--- a/languagetool-language-modules/ca/src/main/resources/org/languagetool/MessagesBundle_ca.properties
+++ b/languagetool-language-modules/ca/src/main/resources/org/languagetool/MessagesBundle_ca.properties
@@ -25,6 +25,10 @@ checkDone = S'ha fet la comprovaci\u00f3, i s'han trobat {0} possibles problemes
 
 checkText = &Revisa el text
 
+checkTextShortDesc = Revisa el text
+
+checkTextLongDesc = Revisa el text
+
 correctionMessage = Correcci\u00f3\:
 
 cs = txec
@@ -149,6 +153,10 @@ guiMenuHelp = &Ajuda
 guiMenuHide = &Amaga a la barra de sistema
 
 guiMenuOpen = &Obre...
+
+guiMenuOpenShortDesc = Obre...
+
+guiMenuOpenLongDesc = Obre...
 
 guiMenuOptions = O&pcions...
 
@@ -288,3 +296,41 @@ https_server_start_failed_unknown_reason = El servidor HTTPS de LanguageTool no 
 tray_menu_enable_server = Executa el servidor HTTP
 
 tray_tooltip_server_running = LanguageTool (servidor HTTP en execuci\u00f3)
+
+guiMenuEdit = &Edita
+
+guiMenuGrammar = Revisi\u00f3 de &text
+
+guiMenuSave = De&sa
+
+guiMenuSaveShortDesc = Desa
+
+guiMenuSaveLongDesc = Desa
+
+guiMenuSaveAs = &Anomena i desa
+
+guiMenuSaveAsShortDesc = Anomena i desa
+
+guiMenuSaveAsLongDesc = Anomena i desa
+
+guiMenuCut = Retalla
+
+guiMenuCopy = Copia
+
+guiMenuPaste = Enganxa
+
+guiMenuSelectAll = Selecciona-ho tot
+
+guiMenuUndo = Desf\u00e9s
+
+guiMenuRedo = &Ref\u00e9s
+
+autoCheckText = Revisi\u00f3 autom\u00e0tica
+
+autoCheckTextShortDesc = Revisi\u00f3 autom\u00e0tica
+
+autoCheckTextLongDesc = Revisi\u00f3 autom\u00e0tica
+
+guiActivateRule = Activa la regla
+
+guiMore = M\u00e9s...
