--- a/languagetool-language-modules/da/src/main/resources/org/languagetool/MessagesBundle_da.properties
+++ b/languagetool-language-modules/da/src/main/resources/org/languagetool/MessagesBundle_da.properties
@@ -25,6 +25,10 @@ checkDone = Kontrol gennemf\u00f8rt, mulige problemer fundet {0}
 
 checkText = &Kontrollere tekst
 
+# checkTextShortDesc = Check Text
+
+# checkTextLongDesc = Check Text
+
 correctionMessage = Korrektion\:
 
 cs = Tjekkisk
@@ -149,6 +153,10 @@ guiMenuHelp = &Hj\u00e6lp
 guiMenuHide = &Skjul til systembakken
 
 guiMenuOpen = &\u00c5bn...
+
+# guiMenuOpenShortDesc = Open File
+
+# guiMenuOpenLongDesc = Open File
 
 guiMenuOptions = &Indstillinger...
 
@@ -288,3 +296,41 @@ https_server_start_failed_unknown_reason = LanguageTool HTTP server kunne ikke s
 tray_menu_enable_server = K\u00f8r HTTP server
 
 tray_tooltip_server_running = LanguageTool (HTTP server k\u00f8re)
+
+# guiMenuEdit = &Edit
+
+# guiMenuGrammar = &Text Checking
+
+# guiMenuSave = &Save
+
+# guiMenuSaveShortDesc = Save File
+
+# guiMenuSaveLongDesc = Save File
+
+# guiMenuSaveAs = Save &As
+
+# guiMenuSaveAsShortDesc = Save File As
+
+# guiMenuSaveAsLongDesc = Save File As
+
+# guiMenuCut = Cut
+
+# guiMenuCopy = Copy
+
+# guiMenuPaste = Paste
+
+# guiMenuSelectAll = Select All
+
+# guiMenuUndo = &Undo
+
+# guiMenuRedo = &Redo
+
+# autoCheckText = AutoCheck
+
+# autoCheckTextShortDesc = AutoCheck
+
+# autoCheckTextLongDesc = AutoCheck
+
+# guiActivateRule = Activate Rule
+
+# guiMore = More...
