--- a/languagetool-language-modules/de/src/main/resources/org/languagetool/MessagesBundle_de.properties
+++ b/languagetool-language-modules/de/src/main/resources/org/languagetool/MessagesBundle_de.properties
@@ -25,6 +25,10 @@ checkDone = Pr\u00fcfung beendet, {0} m\u00f6gliche Probleme gefunden
 
 checkText = Text &pr\u00fcfen
 
+checkTextShortDesc = Text pr\u00fcfen
+
+checkTextLongDesc = Text pr\u00fcfen
+
 correctionMessage = Korrektur\:
 
 cs = Tschechisch
@@ -149,6 +153,10 @@ guiMenuHelp = Hilfe
 guiMenuHide = In den System Tray verkleinern
 
 guiMenuOpen = \u00d6ffnen...
+
+guiMenuOpenShortDesc = Datei \u00f6ffnen
+
+guiMenuOpenLongDesc = Datei \u00f6ffnen
 
 guiMenuOptions = Optionen...
 
@@ -288,3 +296,41 @@ https_server_start_failed_unknown_reason = Der LanguageTool HTTPS-Server konnte 
 tray_menu_enable_server = HTTP-Server aktivieren
 
 tray_tooltip_server_running = LanguageTool (HTTP-Server aktiv)
+
+guiMenuEdit = &Editieren
+
+guiMenuGrammar = &Textpr\u00fcfung
+
+guiMenuSave = &Speichern
+
+guiMenuSaveShortDesc = Datei speichern
+
+guiMenuSaveLongDesc = Datei speichern
+
+guiMenuSaveAs = Speichern &als...
+
+guiMenuSaveAsShortDesc = Datei speichern unter
+
+guiMenuSaveAsLongDesc = Datei speichern unter
+
+guiMenuCut = Ausschneiden
+
+guiMenuCopy = Kopieren
+
+guiMenuPaste = Einf\u00fcgen
+
+guiMenuSelectAll = Alles ausw\u00e4hlen
+
+guiMenuUndo = &R\u00fcckg\u00e4ngig
+
+guiMenuRedo = &Wiederherstellen
+
+autoCheckText = Automatisch pr\u00fcfen
+
+autoCheckTextShortDesc = Automatische Pr\u00fcfung
+
+autoCheckTextLongDesc = Automatische Pr\u00fcfung
+
+guiActivateRule = Regel aktivieren
+
+guiMore = Mehr...
