--- a/languagetool-language-modules/eo/src/main/resources/org/languagetool/MessagesBundle_eo.properties
+++ b/languagetool-language-modules/eo/src/main/resources/org/languagetool/MessagesBundle_eo.properties
@@ -25,6 +25,10 @@ checkDone = Kontrolo farita, {0} eblaj problemoj trovitaj
 
 checkText = &Kontroli tekston
 
+# checkTextShortDesc = Check Text
+
+# checkTextLongDesc = Check Text
+
 correctionMessage = Korektado\:
 
 cs = \u0108e\u0125a
@@ -149,6 +153,10 @@ guiMenuHelp = &Helpo
 guiMenuHide = K&a\u015di en la taskopleto
 
 guiMenuOpen = &Malfermi...
+
+# guiMenuOpenShortDesc = Open File
+
+# guiMenuOpenLongDesc = Open File
 
 guiMenuOptions = &Opcioj...
 
@@ -288,3 +296,41 @@ https_server_start_failed_unknown_reason = Ne eblis startigi la HTTPS-servilon d
 tray_menu_enable_server = Ruli la HTTP-servilon
 
 tray_tooltip_server_running = Lingvoilo (HTTP-servilo ruli\u011das)
+
+# guiMenuEdit = &Edit
+
+# guiMenuGrammar = &Text Checking
+
+# guiMenuSave = &Save
+
+# guiMenuSaveShortDesc = Save File
+
+# guiMenuSaveLongDesc = Save File
+
+# guiMenuSaveAs = Save &As
+
+# guiMenuSaveAsShortDesc = Save File As
+
+# guiMenuSaveAsLongDesc = Save File As
+
+# guiMenuCut = Cut
+
+# guiMenuCopy = Copy
+
+# guiMenuPaste = Paste
+
+# guiMenuSelectAll = Select All
+
+# guiMenuUndo = &Undo
+
+# guiMenuRedo = &Redo
+
+# autoCheckText = AutoCheck
+
+# autoCheckTextShortDesc = AutoCheck
+
+# autoCheckTextLongDesc = AutoCheck
+
+# guiActivateRule = Activate Rule
+
+# guiMore = More...
