--- a/languagetool-language-modules/es/src/main/resources/org/languagetool/MessagesBundle_es.properties
+++ b/languagetool-language-modules/es/src/main/resources/org/languagetool/MessagesBundle_es.properties
@@ -25,6 +25,10 @@ checkDone = Revisi\u00f3n completa, {0} posibles problemas encontrados
 
 checkText = &Revisar Texto
 
+# checkTextShortDesc = Check Text
+
+# checkTextLongDesc = Check Text
+
 correctionMessage = Correcci\u00f3n\:
 
 cs = checo
@@ -149,6 +153,10 @@ guiMenuHelp = A&yuda
 guiMenuHide = Minimizar a la bandeja del sistema
 
 guiMenuOpen = A&brir...
+
+# guiMenuOpenShortDesc = Open File
+
+# guiMenuOpenLongDesc = Open File
 
 guiMenuOptions = Opcione&s...
 
@@ -288,3 +296,41 @@ https_server_start_failed_unknown_reason = El servidor HTTPS de LanguageTool no 
 tray_menu_enable_server = Ejecutar servidor HTTP
 
 tray_tooltip_server_running = LanguageTool (servidor HTTP ejecut\u00e1ndose)
+
+# guiMenuEdit = &Edit
+
+# guiMenuGrammar = &Text Checking
+
+# guiMenuSave = &Save
+
+# guiMenuSaveShortDesc = Save File
+
+# guiMenuSaveLongDesc = Save File
+
+# guiMenuSaveAs = Save &As
+
+# guiMenuSaveAsShortDesc = Save File As
+
+# guiMenuSaveAsLongDesc = Save File As
+
+# guiMenuCut = Cut
+
+# guiMenuCopy = Copy
+
+# guiMenuPaste = Paste
+
+# guiMenuSelectAll = Select All
+
+# guiMenuUndo = &Undo
+
+# guiMenuRedo = &Redo
+
+# autoCheckText = AutoCheck
+
+# autoCheckTextShortDesc = AutoCheck
+
+# autoCheckTextLongDesc = AutoCheck
+
+# guiActivateRule = Activate Rule
+
+# guiMore = More...
