--- a/languagetool-language-modules/fr/src/main/resources/org/languagetool/MessagesBundle_fr.properties
+++ b/languagetool-language-modules/fr/src/main/resources/org/languagetool/MessagesBundle_fr.properties
@@ -25,6 +25,10 @@ checkDone = V\u00e9rification termin\u00e9e. Nombre d'alertes \: {0}
 
 checkText = &V\u00e9rifier le texte
 
+# checkTextShortDesc = Check Text
+
+# checkTextLongDesc = Check Text
+
 correctionMessage = Correction \:
 
 cs = Tch\u00e8que
@@ -149,6 +153,10 @@ guiMenuHelp = &Aide
 guiMenuHide = R\u00e9duire dans la &barre des t\u00e2ches
 
 guiMenuOpen = Ou&vrir...
+
+# guiMenuOpenShortDesc = Open File
+
+# guiMenuOpenLongDesc = Open File
 
 guiMenuOptions = &Options...
 
@@ -288,3 +296,41 @@ https_server_start_failed_unknown_reason = Le serveur HTTPS n\u2019a pas pu \u00
 tray_menu_enable_server = Lancer le serveur HTTP
 
 tray_tooltip_server_running = LanguageTool (serveur HTTP actif)
+
+# guiMenuEdit = &Edit
+
+# guiMenuGrammar = &Text Checking
+
+# guiMenuSave = &Save
+
+# guiMenuSaveShortDesc = Save File
+
+# guiMenuSaveLongDesc = Save File
+
+# guiMenuSaveAs = Save &As
+
+# guiMenuSaveAsShortDesc = Save File As
+
+# guiMenuSaveAsLongDesc = Save File As
+
+# guiMenuCut = Cut
+
+# guiMenuCopy = Copy
+
+# guiMenuPaste = Paste
+
+# guiMenuSelectAll = Select All
+
+# guiMenuUndo = &Undo
+
+# guiMenuRedo = &Redo
+
+# autoCheckText = AutoCheck
+
+# autoCheckTextShortDesc = AutoCheck
+
+# autoCheckTextLongDesc = AutoCheck
+
+# guiActivateRule = Activate Rule
+
+# guiMore = More...
