--- a/languagetool-language-modules/gl/src/main/resources/org/languagetool/MessagesBundle_gl.properties
+++ b/languagetool-language-modules/gl/src/main/resources/org/languagetool/MessagesBundle_gl.properties
@@ -25,6 +25,10 @@ checkDone = Comprobaci\u00f3n feita, atop\u00e1ronse {0} problemas potenciais
 
 checkText = &Comprobar o texto
 
+# checkTextShortDesc = Check Text
+
+# checkTextLongDesc = Check Text
+
 correctionMessage = Correcci\u00f3n\:
 
 cs = Checo
@@ -149,6 +153,10 @@ guiMenuHelp = A&xuda
 guiMenuHide = &Minimizar \u00e1 bandexa do sistema
 
 guiMenuOpen = A&brir...
+
+# guiMenuOpenShortDesc = Open File
+
+# guiMenuOpenLongDesc = Open File
 
 guiMenuOptions = Opci\u00f3n&s...
 
@@ -288,3 +296,41 @@ https_server_start_failed_unknown_reason = Non se puido arrancar o servidor HTTP
 tray_menu_enable_server = Executar servidor HTTP
 
 tray_tooltip_server_running = LanguageTool (servidor HTTP en execuci\u00f3n)
+
+# guiMenuEdit = &Edit
+
+# guiMenuGrammar = &Text Checking
+
+# guiMenuSave = &Save
+
+# guiMenuSaveShortDesc = Save File
+
+# guiMenuSaveLongDesc = Save File
+
+# guiMenuSaveAs = Save &As
+
+# guiMenuSaveAsShortDesc = Save File As
+
+# guiMenuSaveAsLongDesc = Save File As
+
+# guiMenuCut = Cut
+
+# guiMenuCopy = Copy
+
+# guiMenuPaste = Paste
+
+# guiMenuSelectAll = Select All
+
+# guiMenuUndo = &Undo
+
+# guiMenuRedo = &Redo
+
+# autoCheckText = AutoCheck
+
+# autoCheckTextShortDesc = AutoCheck
+
+# autoCheckTextLongDesc = AutoCheck
+
+# guiActivateRule = Activate Rule
+
+# guiMore = More...
