--- a/languagetool-language-modules/is/src/main/resources/org/languagetool/MessagesBundle_is.properties
+++ b/languagetool-language-modules/is/src/main/resources/org/languagetool/MessagesBundle_is.properties
@@ -25,6 +25,10 @@ checkDone = Yfirlestri loki\u00f0, {0} hugsanlegar villur fundust
 
 checkText = &Yfirlestur
 
+# checkTextShortDesc = Check Text
+
+# checkTextLongDesc = Check Text
+
 correctionMessage = Lei\u00f0r\u00e9tting\:
 
 cs = t\u00e9kkneska
@@ -149,6 +153,10 @@ guiMenuHelp = &Hj\u00e1lp
 guiMenuHide = &Fela \u00e1 t\u00e6kjasl\u00e1
 
 guiMenuOpen = &Opna...
+
+# guiMenuOpenShortDesc = Open File
+
+# guiMenuOpenLongDesc = Open File
 
 guiMenuOptions = &Valkostir...
 
@@ -288,3 +296,41 @@ whitespace_repetition = Hugsanleg ritvilla\: endurteki\u00f0 bil
 # tray_menu_enable_server = Run HTTP server
 
 # tray_tooltip_server_running = LanguageTool (HTTP server running)
+
+# guiMenuEdit = &Edit
+
+# guiMenuGrammar = &Text Checking
+
+# guiMenuSave = &Save
+
+# guiMenuSaveShortDesc = Save File
+
+# guiMenuSaveLongDesc = Save File
+
+# guiMenuSaveAs = Save &As
+
+# guiMenuSaveAsShortDesc = Save File As
+
+# guiMenuSaveAsLongDesc = Save File As
+
+# guiMenuCut = Cut
+
+# guiMenuCopy = Copy
+
+# guiMenuPaste = Paste
+
+# guiMenuSelectAll = Select All
+
+# guiMenuUndo = &Undo
+
+# guiMenuRedo = &Redo
+
+# autoCheckText = AutoCheck
+
+# autoCheckTextShortDesc = AutoCheck
+
+# autoCheckTextLongDesc = AutoCheck
+
+# guiActivateRule = Activate Rule
+
+# guiMore = More...
