--- a/languagetool-language-modules/it/src/main/resources/org/languagetool/MessagesBundle_it.properties
+++ b/languagetool-language-modules/it/src/main/resources/org/languagetool/MessagesBundle_it.properties
@@ -25,6 +25,10 @@ checkDone = Controllo completato, sono stati trovati {0} possibili errori
 
 checkText = &Controlla Testo
 
+# checkTextShortDesc = Check Text
+
+# checkTextLongDesc = Check Text
+
 correctionMessage = Correzione\:
 
 cs = Ceco
@@ -149,6 +153,10 @@ guiMenuHelp = &Aiuto
 guiMenuHide = &Minimizza nel System Tray
 
 guiMenuOpen = &Apri...
+
+# guiMenuOpenShortDesc = Open File
+
+# guiMenuOpenLongDesc = Open File
 
 guiMenuOptions = Opzio&ni...
 
@@ -288,3 +296,41 @@ https_server_start_failed_unknown_reason = Non \u00e8 stato possibile avviare il
 tray_menu_enable_server = Avviare il servizio HTTP.
 
 tray_tooltip_server_running = LanguageTool (servizio HTTP attivo)
+
+# guiMenuEdit = &Edit
+
+# guiMenuGrammar = &Text Checking
+
+# guiMenuSave = &Save
+
+# guiMenuSaveShortDesc = Save File
+
+# guiMenuSaveLongDesc = Save File
+
+# guiMenuSaveAs = Save &As
+
+# guiMenuSaveAsShortDesc = Save File As
+
+# guiMenuSaveAsLongDesc = Save File As
+
+# guiMenuCut = Cut
+
+# guiMenuCopy = Copy
+
+# guiMenuPaste = Paste
+
+# guiMenuSelectAll = Select All
+
+# guiMenuUndo = &Undo
+
+# guiMenuRedo = &Redo
+
+# autoCheckText = AutoCheck
+
+# autoCheckTextShortDesc = AutoCheck
+
+# autoCheckTextLongDesc = AutoCheck
+
+# guiActivateRule = Activate Rule
+
+# guiMore = More...
