--- a/languagetool-language-modules/km/src/main/resources/org/languagetool/MessagesBundle_km.properties
+++ b/languagetool-language-modules/km/src/main/resources/org/languagetool/MessagesBundle_km.properties
@@ -25,6 +25,10 @@ checkDone = \u1792\u17d2\u179c\u17be\u200b\u1780\u17b6\u179a\u200b\u1796\u17b7\u
 
 checkText = \u200b&\u1796\u17b7\u1793\u17b7\u178f\u17d2\u1799\u200b\u1798\u17be\u179b\u200b\u17af\u1780\u179f\u17b6\u179a
 
+# checkTextShortDesc = Check Text
+
+# checkTextLongDesc = Check Text
+
 correctionMessage = \u1780\u17b6\u179a\u1780\u17c2\u17d6
 
 cs = \u1786\u17c1\u1780
@@ -149,6 +153,10 @@ guiMenuHelp = &\u1787\u17c6\u1793\u17bd\u1799
 guiMenuHide = \u179b\u17b6\u1780\u17cb\u1791\u17bb\u1780\u1793\u17c5\u1780\u17d2\u1793\u17bb\u1784\u1790\u17b6\u179f\u1794\u17d2\u179a\u1796\u17d0\u1793\u17d2\u1792
 
 guiMenuOpen = &\u1794\u17be\u1780...
+
+# guiMenuOpenShortDesc = Open File
+
+# guiMenuOpenLongDesc = Open File
 
 guiMenuOptions = \u1787\u1798\u17d2\u179a\u17be\u179f&\u1781\u17d2\u179b\u17c7\u17d7...
 
@@ -288,3 +296,41 @@ ja = \u1797\u17b6\u179f\u17b6\u1787\u1794\u17c9\u17bb\u1793 \u17ac \u1794\u17d2\
 # tray_menu_enable_server = Run HTTP server
 
 # tray_tooltip_server_running = LanguageTool (HTTP server running)
+
+# guiMenuEdit = &Edit
+
+# guiMenuGrammar = &Text Checking
+
+# guiMenuSave = &Save
+
+# guiMenuSaveShortDesc = Save File
+
+# guiMenuSaveLongDesc = Save File
+
+# guiMenuSaveAs = Save &As
+
+# guiMenuSaveAsShortDesc = Save File As
+
+# guiMenuSaveAsLongDesc = Save File As
+
+# guiMenuCut = Cut
+
+# guiMenuCopy = Copy
+
+# guiMenuPaste = Paste
+
+# guiMenuSelectAll = Select All
+
+# guiMenuUndo = &Undo
+
+# guiMenuRedo = &Redo
+
+# autoCheckText = AutoCheck
+
+# autoCheckTextShortDesc = AutoCheck
+
+# autoCheckTextLongDesc = AutoCheck
+
+# guiActivateRule = Activate Rule
+
+# guiMore = More...
