--- a/languagetool-language-modules/lt/src/main/resources/org/languagetool/MessagesBundle_lt.properties
+++ b/languagetool-language-modules/lt/src/main/resources/org/languagetool/MessagesBundle_lt.properties
@@ -25,6 +25,10 @@ checkDone = Tikrinimas baigtas, rasta galim\u0173 klaid\u0173\: {0}
 
 checkText = Tikrinti tekst\u0105
 
+# checkTextShortDesc = Check Text
+
+# checkTextLongDesc = Check Text
+
 # correctionMessage = Correction\:
 
 cs = \u010dek\u0173
@@ -149,6 +153,10 @@ guiMenuHelp = Pagalba
 guiMenuHide = Pasl\u0117pti sistemos prane\u0161im\u0173 vietoje
 
 guiMenuOpen = Atverti...
+
+# guiMenuOpenShortDesc = Open File
+
+# guiMenuOpenLongDesc = Open File
 
 guiMenuOptions = Nustatymai...
 
@@ -288,3 +296,41 @@ ro = Rom\u00e2n\u0103
 # tray_menu_enable_server = Run HTTP server
 
 # tray_tooltip_server_running = LanguageTool (HTTP server running)
+
+# guiMenuEdit = &Edit
+
+# guiMenuGrammar = &Text Checking
+
+# guiMenuSave = &Save
+
+# guiMenuSaveShortDesc = Save File
+
+# guiMenuSaveLongDesc = Save File
+
+# guiMenuSaveAs = Save &As
+
+# guiMenuSaveAsShortDesc = Save File As
+
+# guiMenuSaveAsLongDesc = Save File As
+
+# guiMenuCut = Cut
+
+# guiMenuCopy = Copy
+
+# guiMenuPaste = Paste
+
+# guiMenuSelectAll = Select All
+
+# guiMenuUndo = &Undo
+
+# guiMenuRedo = &Redo
+
+# autoCheckText = AutoCheck
+
+# autoCheckTextShortDesc = AutoCheck
+
+# autoCheckTextLongDesc = AutoCheck
+
+# guiActivateRule = Activate Rule
+
+# guiMore = More...
