--- a/languagetool-language-modules/pl/src/main/resources/org/languagetool/MessagesBundle_pl.properties
+++ b/languagetool-language-modules/pl/src/main/resources/org/languagetool/MessagesBundle_pl.properties
@@ -25,6 +25,10 @@ checkDone = Sprawdzono. Liczba znalezionych potencjalnych problem\u00f3w\: {0}
 
 checkText = &Sprawd\u017a tekst
 
+# checkTextShortDesc = Check Text
+
+# checkTextLongDesc = Check Text
+
 correctionMessage = Proponowana poprawka\:
 
 cs = czeski
@@ -149,6 +153,10 @@ guiMenuHelp = Pomo&c
 guiMenuHide = Schowaj do paska &zada\u0144
 
 guiMenuOpen = &Otw\u00f3rz...
+
+# guiMenuOpenShortDesc = Open File
+
+# guiMenuOpenLongDesc = Open File
 
 guiMenuOptions = &Opcje...
 
@@ -288,3 +296,41 @@ https_server_start_failed_unknown_reason = Nie mo\u017cna uruchomi\u0107 serwera
 tray_menu_enable_server = Uruchom serwer HTTP
 
 tray_tooltip_server_running = LanguageTool (uruchomiony serwer HTTP)
+
+# guiMenuEdit = &Edit
+
+# guiMenuGrammar = &Text Checking
+
+# guiMenuSave = &Save
+
+# guiMenuSaveShortDesc = Save File
+
+# guiMenuSaveLongDesc = Save File
+
+# guiMenuSaveAs = Save &As
+
+# guiMenuSaveAsShortDesc = Save File As
+
+# guiMenuSaveAsLongDesc = Save File As
+
+# guiMenuCut = Cut
+
+# guiMenuCopy = Copy
+
+# guiMenuPaste = Paste
+
+# guiMenuSelectAll = Select All
+
+# guiMenuUndo = &Undo
+
+# guiMenuRedo = &Redo
+
+# autoCheckText = AutoCheck
+
+# autoCheckTextShortDesc = AutoCheck
+
+# autoCheckTextLongDesc = AutoCheck
+
+# guiActivateRule = Activate Rule
+
+# guiMore = More...
