--- a/languagetool-language-modules/pt/src/main/resources/org/languagetool/MessagesBundle_pt_BR.properties
+++ b/languagetool-language-modules/pt/src/main/resources/org/languagetool/MessagesBundle_pt_BR.properties
@@ -25,6 +25,10 @@ checkDone = Problemas potenciais encontrados\: {0} (tempo\: {1}ms)
 
 checkText = &Verificar texto
 
+# checkTextShortDesc = Check Text
+
+# checkTextLongDesc = Check Text
+
 correctionMessage = Corre\u00e7\u00e3o\:
 
 cs = Tcheco
@@ -149,6 +153,10 @@ guiMenuHelp = A&juda
 guiMenuHide = &Esconder para a bandeja do sistema
 
 guiMenuOpen = &Abrir
+
+# guiMenuOpenShortDesc = Open File
+
+# guiMenuOpenLongDesc = Open File
 
 guiMenuOptions = O&p\u00e7\u00f5es...
 
@@ -288,3 +296,41 @@ https_server_start_failed_unknown_reason = O servidor HTTPS do LanguageTool n\u0
 tray_menu_enable_server = Executar servidor HTTP
 
 tray_tooltip_server_running = LanguageTool (servidor HTTP em execu\u00e7\u00e3o)
+
+# guiMenuEdit = &Edit
+
+# guiMenuGrammar = &Text Checking
+
+# guiMenuSave = &Save
+
+# guiMenuSaveShortDesc = Save File
+
+# guiMenuSaveLongDesc = Save File
+
+# guiMenuSaveAs = Save &As
+
+# guiMenuSaveAsShortDesc = Save File As
+
+# guiMenuSaveAsLongDesc = Save File As
+
+# guiMenuCut = Cut
+
+# guiMenuCopy = Copy
+
+# guiMenuPaste = Paste
+
+# guiMenuSelectAll = Select All
+
+# guiMenuUndo = &Undo
+
+# guiMenuRedo = &Redo
+
+# autoCheckText = AutoCheck
+
+# autoCheckTextShortDesc = AutoCheck
+
+# autoCheckTextLongDesc = AutoCheck
+
+# guiActivateRule = Activate Rule
+
+# guiMore = More...
