--- a/languagetool-language-modules/pt/src/main/resources/org/languagetool/MessagesBundle_pt_PT.properties
+++ b/languagetool-language-modules/pt/src/main/resources/org/languagetool/MessagesBundle_pt_PT.properties
@@ -25,6 +25,10 @@ checkDone = Verifica\u00e7\u00e3o conclu\u00edda, encontrados {0} problemas pote
 
 checkText = &Verificar o texto
 
+checkTextShortDesc = Verificar Texto
+
+checkTextLongDesc = Verificar Texto
+
 correctionMessage = Correc\u00e7\u00e3o\:
 
 cs = Checo
@@ -149,6 +153,10 @@ guiMenuHelp = A&juda
 guiMenuHide = &Minimizar \u00e0 bandeja do sistema
 
 guiMenuOpen = A&brir...
+
+guiMenuOpenShortDesc = Abrir Ficheiro
+
+guiMenuOpenLongDesc = Abrir Ficheiro
 
 guiMenuOptions = Op\u00e7\u00f5e&s...
 
@@ -288,3 +296,41 @@ https_server_start_failed_unknown_reason = O servidor HTTPS do LanguageTool n\u0
 tray_menu_enable_server = Executar servidor HTTP
 
 tray_tooltip_server_running = LanguageTool (servidor HTTP a executar)
+
+guiMenuEdit = &Editar
+
+guiMenuGrammar = &Verifica\u00e7\u00e3o de Texto
+
+guiMenuSave = &Gravar
+
+guiMenuSaveShortDesc = Gravar Ficheiro
+
+guiMenuSaveLongDesc = Gravar Ficheiro
+
+guiMenuSaveAs = Gravar &Como
+
+guiMenuSaveAsShortDesc = Gravar Ficheiro Como
+
+guiMenuSaveAsLongDesc = Gravar Ficheiro Como
+
+guiMenuCut = Cortar
+
+guiMenuCopy = Copiar
+
+guiMenuPaste = Colar
+
+guiMenuSelectAll = Seleccionar Tudo
+
+guiMenuUndo = &Desfazer
+
+guiMenuRedo = &Refazer
+
+autoCheckText = AutoVerificar
+
+autoCheckTextShortDesc = AutoVerificar
+
+autoCheckTextLongDesc = AutoVerificar
+
+guiActivateRule = Activar Regra
+
+guiMore = Mais...
