--- a/languagetool-language-modules/ro/src/main/resources/org/languagetool/MessagesBundle_ro.properties
+++ b/languagetool-language-modules/ro/src/main/resources/org/languagetool/MessagesBundle_ro.properties
@@ -25,6 +25,10 @@ checkDone = Verificare complet\u0103, s-au g\u0103sit {0} probleme probabile
 
 checkText = Verifi&c\u0103 textul
 
+# checkTextShortDesc = Check Text
+
+# checkTextLongDesc = Check Text
+
 correctionMessage = Corectare\:
 
 cs = Ceh\u0103
@@ -149,6 +153,10 @@ guiMenuHelp = &Ajutor
 guiMenuHide = &Ascunde \u00een zona de notificare
 
 guiMenuOpen = &Deschide...
+
+# guiMenuOpenShortDesc = Open File
+
+# guiMenuOpenLongDesc = Open File
 
 guiMenuOptions = &Op\u021biuni...
 
@@ -288,3 +296,41 @@ https_server_start_failed_unknown_reason = Server-ul HTTPS LanguageTool nu a put
 tray_menu_enable_server = Rulare server HTTP
 
 tray_tooltip_server_running = LanguageTool (server-ul HTTP ruleaz\u0103)
+
+# guiMenuEdit = &Edit
+
+# guiMenuGrammar = &Text Checking
+
+# guiMenuSave = &Save
+
+# guiMenuSaveShortDesc = Save File
+
+# guiMenuSaveLongDesc = Save File
+
+# guiMenuSaveAs = Save &As
+
+# guiMenuSaveAsShortDesc = Save File As
+
+# guiMenuSaveAsLongDesc = Save File As
+
+# guiMenuCut = Cut
+
+# guiMenuCopy = Copy
+
+# guiMenuPaste = Paste
+
+# guiMenuSelectAll = Select All
+
+# guiMenuUndo = &Undo
+
+# guiMenuRedo = &Redo
+
+# autoCheckText = AutoCheck
+
+# autoCheckTextShortDesc = AutoCheck
+
+# autoCheckTextLongDesc = AutoCheck
+
+# guiActivateRule = Activate Rule
+
+# guiMore = More...
