--- a/languagetool-language-modules/sk/src/main/resources/org/languagetool/MessagesBundle_sk.properties
+++ b/languagetool-language-modules/sk/src/main/resources/org/languagetool/MessagesBundle_sk.properties
@@ -25,6 +25,10 @@ checkDone = Kontrola je ukon\u010den\u00e1, {0} n\u00e1jden\u00fdch potenci\u00e
 
 checkText = S&kontrolova\u0165
 
+# checkTextShortDesc = Check Text
+
+# checkTextLongDesc = Check Text
+
 correctionMessage = Oprava\:
 
 cs = \u010cesky
@@ -149,6 +153,10 @@ guiMenuHelp = &Pomocn\u00edk
 guiMenuHide = &Skry\u0165 do syst\u00e9movej &li\u0161ty
 
 guiMenuOpen = &Otvori\u0165...
+
+# guiMenuOpenShortDesc = Open File
+
+# guiMenuOpenLongDesc = Open File
 
 guiMenuOptions = Na&stavenia...
 
@@ -288,3 +296,41 @@ https_server_start_failed_unknown_reason = LanguageTool HTTPS server nie je mo\u
 tray_menu_enable_server = Spusti\u0165 HTTP server
 
 tray_tooltip_server_running = LanguageTool (HTTP server be\u017e\u00ed)
+
+# guiMenuEdit = &Edit
+
+# guiMenuGrammar = &Text Checking
+
+# guiMenuSave = &Save
+
+# guiMenuSaveShortDesc = Save File
+
+# guiMenuSaveLongDesc = Save File
+
+# guiMenuSaveAs = Save &As
+
+# guiMenuSaveAsShortDesc = Save File As
+
+# guiMenuSaveAsLongDesc = Save File As
+
+# guiMenuCut = Cut
+
+# guiMenuCopy = Copy
+
+# guiMenuPaste = Paste
+
+# guiMenuSelectAll = Select All
+
+# guiMenuUndo = &Undo
+
+# guiMenuRedo = &Redo
+
+# autoCheckText = AutoCheck
+
+# autoCheckTextShortDesc = AutoCheck
+
+# autoCheckTextLongDesc = AutoCheck
+
+# guiActivateRule = Activate Rule
+
+# guiMore = More...
