--- a/languagetool-language-modules/sl/src/main/resources/org/languagetool/MessagesBundle_sl.properties
+++ b/languagetool-language-modules/sl/src/main/resources/org/languagetool/MessagesBundle_sl.properties
@@ -25,6 +25,10 @@ checkDone = Najdenih {0} potencialnih te\u017eav (\u010das\: {1}ms)
 
 checkText = &Preveri besedilo
 
+checkTextShortDesc = Preveri besedilo
+
+checkTextLongDesc = Preveri besedilo
+
 correctionMessage = Popravek\:
 
 cs = \u010de\u0161ki
@@ -149,6 +153,10 @@ guiMenuHelp = Po&mo\u010d
 guiMenuHide = &Skrij v sistemski pladenj
 
 guiMenuOpen = &Odpri ...
+
+guiMenuOpenShortDesc = Odpri datoteko
+
+guiMenuOpenLongDesc = Odpri datoteko
 
 guiMenuOptions = &Mo\u017enosti ...
 
@@ -288,3 +296,41 @@ https_server_start_failed_unknown_reason = Stre\u017enika HTTPS za LanguageTool 
 tray_menu_enable_server = Za\u017eeni stre\u017enik HTTP
 
 tray_tooltip_server_running = LanguageTool (delujo\u010di stre\u017enik HTTP)
+
+guiMenuEdit = &Uredi
+
+guiMenuGrammar = Preverjanje &besedila
+
+guiMenuSave = &Shrani
+
+guiMenuSaveShortDesc = Shrani datoteko
+
+guiMenuSaveLongDesc = Shrani datoteko
+
+guiMenuSaveAs = Shrani &kot
+
+guiMenuSaveAsShortDesc = Shrani datoteko kot
+
+guiMenuSaveAsLongDesc = Shrani datoteko kot
+
+guiMenuCut = Izre\u017ei
+
+guiMenuCopy = Kopiraj
+
+guiMenuPaste = Prilepi
+
+guiMenuSelectAll = Izberi vse
+
+guiMenuUndo = Ra&zveljavi
+
+guiMenuRedo = Po&novi
+
+autoCheckText = Samodejno preveri
+
+autoCheckTextShortDesc = Samodejno preveri
+
+autoCheckTextLongDesc = Samodejno preveri
+
+guiActivateRule = Aktiviraj pravilo
+
+guiMore = Dodatno ...
