--- a/languagetool-language-modules/sv/src/main/resources/org/languagetool/MessagesBundle_sv.properties
+++ b/languagetool-language-modules/sv/src/main/resources/org/languagetool/MessagesBundle_sv.properties
@@ -25,6 +25,10 @@ checkDone = Kontroll utf\u00f6rd, Hittade {0} potentiella problem
 
 checkText = &Kontrollera Text
 
+# checkTextShortDesc = Check Text
+
+# checkTextLongDesc = Check Text
+
 correctionMessage = R\u00e4ttelse\:
 
 cs = Tjeckiska
@@ -149,6 +153,10 @@ guiMenuHelp = &Hj\u00e4lp
 guiMenuHide = &G\u00f6m i systemf\u00e4ltet
 
 guiMenuOpen = &\u00f6ppna...
+
+# guiMenuOpenShortDesc = Open File
+
+# guiMenuOpenLongDesc = Open File
 
 guiMenuOptions = &Alternativ...
 
@@ -288,3 +296,41 @@ ro = Rom\u00e2n\u0103
 # tray_menu_enable_server = Run HTTP server
 
 # tray_tooltip_server_running = LanguageTool (HTTP server running)
+
+# guiMenuEdit = &Edit
+
+# guiMenuGrammar = &Text Checking
+
+# guiMenuSave = &Save
+
+# guiMenuSaveShortDesc = Save File
+
+# guiMenuSaveLongDesc = Save File
+
+# guiMenuSaveAs = Save &As
+
+# guiMenuSaveAsShortDesc = Save File As
+
+# guiMenuSaveAsLongDesc = Save File As
+
+# guiMenuCut = Cut
+
+# guiMenuCopy = Copy
+
+# guiMenuPaste = Paste
+
+# guiMenuSelectAll = Select All
+
+# guiMenuUndo = &Undo
+
+# guiMenuRedo = &Redo
+
+# autoCheckText = AutoCheck
+
+# autoCheckTextShortDesc = AutoCheck
+
+# autoCheckTextLongDesc = AutoCheck
+
+# guiActivateRule = Activate Rule
+
+# guiMore = More...
