--- a/languagetool-language-modules/tl/src/main/resources/org/languagetool/MessagesBundle_tl.properties
+++ b/languagetool-language-modules/tl/src/main/resources/org/languagetool/MessagesBundle_tl.properties
@@ -1,290 +1,336 @@
 # DO NOT MODIFY MANUALLY - all changes are done at https://www.transifex.com/projects/p/languagetool/
 # Copyright (C) 2006-2013 the LanguageTool team (http://www.languagetool.org)
 
-atd = Automatically detect language
+atd = Awtomatikong malalaman ang wika
 
-ast = Asturian
+# ast = Asturian
 
-be = Belarusian
+# be = Belarusian
 
-br = Breton
+# br = Breton
 
-ca = Catalan
+ca = Katalan
 
-category_case = Capitalization
+category_case = Kapitalisasiyon
 
-category_false_friend = False friends
+# category_false_friend = False friends
 
-category_grammar = Grammar
+category_grammar = Gramatika
 
-category_misc = Miscellaneous
+category_misc = Mga karagdagan
 
-category_typo = Possible Typo
+category_typo = Posibleng Typo
 
-checkDone = Check done, {0} potential problems found
+checkDone = Mga nahanap na potensiyal na problema\: {0} (oras\: {1}ms)
 
-checkText = &Check Text
+checkText = &Suriin ang Teksto
 
-correctionMessage = Correction\:
+# checkTextShortDesc = Check Text
 
-cs = Czech
+# checkTextLongDesc = Check Text
 
-da = Danish
+correctionMessage = Pagtatama\:
 
-de = German
+# cs = Czech
 
-de-DE = German (Germany)
+# da = Danish
 
-de-AT = German (Austrian)
+# de = German
 
-de-CH = German (Swiss)
+de-DE = Aleman (Alemanya)
+
+de-AT = Aleman (Austriyana)
+
+de-CH = Aleman (Suwiso)
 
 # deactivate rule with one click (stand-alone GUI):
-deactivateRule = (deactivate)
+deactivateRule = (hindi aktibo)
 
 # information about which rules are currently de-activated (stand-alone GUI):
-deactivatedRulesText = <br>Deactivated rules - click to activate again\:
+deactivatedRulesText = <br>Hindi aktibong mga patakaran - pindutin upang paandarin muli\:
 
-desc_comma_whitespace = Use of whitespace before comma and before/after parentheses
+desc_comma_whitespace = Paggamit ng blangko bago ang kuwit at bago/pagkatapos ng panaklong
 
-desc_double_punct = Use of two consecutive dots or commas
+desc_double_punct = Paggamit ng dalawang magkasunod na tuldok o kuwit
 
-desc_repetition = Word repetition (e.g. 'pagkain pagkain')
+desc_repetition = Repetisiyon ng salita (e.g. 'pagkain pagkain')
 
-desc_repetition_short = Word repetition
+desc_repetition_short = Repetisiyon ng salita
 
-desc_repetition_beginning = Successive sentences beginning with the same word
+desc_repetition_beginning = Magkasunod na mga pangungusap na nagsisimula sa parehong salita
 
-desc_repetition_beginning_word = Three successive sentences begin with the same word.
+desc_repetition_beginning_word = Tatlong magkasunod na pangungusap na nagsisimula sa parehong salita. 
 
-desc_repetition_beginning_adv = Two successive sentences begin with the same adverb.
+desc_repetition_beginning_adv = Dalawang magkasunod na pangungusap na nagsisimula sa parehong pang-abay.
 
-desc_repetition_beginning_thesaurus = Reword the sentence or use the thesaurus (menu Tools > Language) to find a synonym.
+desc_repetition_beginning_thesaurus = Palitan ang salita ng pangungusap o gumamit ng thesaurus upang mahanap ang kasingkahulugan.
 
-desc_unpaired_brackets = Unpaired braces, brackets, quotation marks and similar symbols
+desc_unpaired_brackets = Walang kapares na mga panaklong, braket, panipi, at kaparehong simbolo
 
-desc_uppercase_sentence = Checks that a sentence starts with an uppercase letter
+desc_uppercase_sentence = Sinusuri na nagsisimula ang pangungusap sa malaking letra
 
-desc_whitespacerepetition = Whitespace repetition (bad formatting)
+desc_whitespacerepetition = Pag-uulit ng Whitespace (pangit na pag-format)
 
-desc_spelling = Possible spelling mistake
+desc_spelling = Posibleng pagkakamali sa ispeling
 
-desc_spelling_no_suggestions = Possible spelling mistake (without suggestions)
+desc_spelling_no_suggestions = Posibleng pagkakamali sa ispeling (nang walang suhestiyon)
 
-desc_spelling_short = Spelling mistake
+desc_spelling_short = Pagkakamali sa ispeling
 
 # 3607406 +
 
-desc_whitespace_before_punctuation = Use of whitespace before colon, semicolon and percentage.
+# desc_whitespace_before_punctuation = Use of whitespace before colon, semicolon and percentage.
 
 # 3607406 -
 
-double_dots_short = Two consecutive dots
+double_dots_short = Dalawang magkasunod na tuldok
 
-double_commas_short = Two consecutive comma
+double_commas_short = Dalawang magkasunod na kuwit
 
-el = Greek
+el = Griyego
 
-en = English
+en = Ingles
 
-en-AU = English (Australian)
+en-AU = Ingles (Australyano)
 
-en-GB = English (British)
+en-GB = Ingles (British)
 
-en-US = English (American)
+en-US = Ingles (Amerikano)
 
-en-CA = English (Canadian)
+en-CA = Ingles (Canadian)
 
-en-NZ = English (New Zealand)
+en-NZ = Ingles (New Zealand)
 
-en-ZA = English (South African)
+en-ZA = Ingles (Timog Aprika)
 
-enterText = Please type or paste text to check in the top area
+enterText = Paki tayp o i-paste ang teksto para suriin ang itaas na bahagi
 
-enterText2 = Please insert text to check here
+enterText2 = Paki pasok ang teksto upang suriin dito
 
-eo = Esperanto
+# eo = Esperanto
 
-errorContext = Context\:
+errorContext = Konteksto\:
 
-errorMessage = Message\:
+errorMessage = Mensahe\:
 
-es = Spanish
+es = Espanyol
 
-false_friend = False friend
+# false_friend = False friend
 
-false_friend_desc = false friend hint for\:
+# false_friend_desc = false friend hint for\:
 
-false_friend_hint = Hint\: "{0}" ({1}) means {2} ({3}).
+false_friend_hint = Pahiwatig\: "{0}" ({1}) ay ibig sabihin {2} ({3}).
 
-false_friend_suggestion = Did you mean {0}?
+false_friend_suggestion = {0} and ibig mong sabihin?
 
-fr = French
+fr = Pranses
 
-gl = Galician
+gl = Galisiyan
 
-guiAddButton=Add...
-guiCancelButton = Cancel
+guiAddButton=Idagdag...
+guiCancelButton = Ikansela
 
-guiCheckComplete = LanguageTool check is complete.
-guiCloseButton=Close
+guiCheckComplete = Tapos na ang pagsuri ng LanguageTool sa napiling teksto.
+guiCloseButton=Isara
 
-guiConfigWindowTitle = LanguageTool Options
+guiConfigWindowTitle = Mga Opsiyon ng LanguageTool
 
 guiDemoText = Ang LanguageTool ay maganda gamit sa araw-araw. Ang talatang ito ay nagpapakita ng ng kakayahan ng LanguageTool at hinahalimbawa kung paano ito gamitin. Litaw rin sa talatang ito na may mga bagaybagay na hindii pa kayang itama nng LanguageTool.
-guiLanguageManagerDialog=Language Module Manager
+guiLanguageManagerDialog=Tagapangasiwa ng Modyul na Pangwika
 
-guiMatchCount = Potential errors\:
+guiMatchCount = Potensiyal na pagkakamali\:
 
-guiMenuAbout = &About...
+# guiMenuAbout = &About...
 
-guiMenuAddRules = Load &Rule File
+# guiMenuAddRules = Load &Rule File...
 
-guiMenuCheckClipboard = &Check Text in Clipboard
+# guiMenuCheckClipboard = &Check Text in Clipboard
 
-guiMenuFile = &File
+# guiMenuFile = &File
 
-guiMenuHelp = &Help
+# guiMenuHelp = &Help
 
-guiMenuHide = &Hide to System Tray
+# guiMenuHide = &Hide to System Tray
 
-guiMenuOpen = &Open...
+# guiMenuOpen = &Open...
 
-guiMenuOptions = Option&s...
+# guiMenuOpenShortDesc = Open File
 
-guiMenuQuit = &Quit
+# guiMenuOpenLongDesc = Open File
 
-guiMenuShowMainWindow = Open Main Window
+# guiMenuOptions = Option&s...
 
-guiMotherTongue = Your mother tongue\:
+# guiMenuQuit = &Quit
 
-guiNoErrorsFound = No errors or warnings found (language\: {0})
+guiMenuShowMainWindow = Buksan ang Pangunahing Window
 
-guiNoErrorsFoundSelectedText = No errors or warnings found in selected text (language\: {0})
+guiMotherTongue = Ang iyong inang wika\:
 
-guiOKButton = &OK
+guiNoErrorsFound = Walang nahanap na kamalian o babala (wika\: {0})
 
-guiOOoChangeButton = &Change
+guiNoErrorsFoundSelectedText = Walang nahanap na kamalian o babala sa piniling teksto (wika\: {0})
 
-guiOOoCloseButton = Close
+# guiOKButton = &OK
 
-guiOOoIgnoreAllButton = Ignore All
+# guiOOoChangeButton = &Change
 
-guiOOoIgnoreButton = Ignore
+guiOOoCloseButton = Isara
 
-guiOOoOptionsButton = Options...
+guiOOoIgnoreAllButton = Huwag pansinin ang lahat
 
-guiProgressWindowTitle = LanguageTool\: Checking Text...
+guiOOoIgnoreButton = Huwag pansinin
 
-guiRemoveButton=Remove
-guiReplaceWindowTitle = Replace text
+guiOOoOptionsButton = Mga opsiyon
 
-guiReplaceWithOtherText = <other text>
+guiProgressWindowTitle = LanguageTool\: Nagsusuri ng Teksto\u2026
 
-guiRunOnPort = Run as server on po&rt
+guiRemoveButton=Tanggalin
+guiReplaceWindowTitle = Palitan ang teksto
 
-guiSelectionCheckComplete = LanguageTool check of selected text is complete.
+guiReplaceWithOtherText = <ibang teksto>
 
-guiTagText = &Tag Text
+guiRunOnPort = Patakbuhin bilang server po&rt
 
-incorrect_case = This sentence does not start with an uppercase letter
+guiSelectionCheckComplete = Tapos na ang pagsuri ng LanguageTool sa napiling teksto.
 
-is = Icelandic
+# guiTagText = &Tag Text
 
-it = Italian
+incorrect_case = Hindi nagsisimula ang pangungusap na ito sa malaking letra
 
-km = Khmer
+# is = Icelandic
 
-lt = Lithuanian
+it = Italyano
 
-missing_space_after_comma = Put a space after the comma
+# km = Khmer
 
-ml = Malayalam
+lt = Litwaniya
 
-nl = Dutch
+missing_space_after_comma = Lagyan ng espasiyo pagkatapos ng kuwit
 
-no_space_after = Don't put a space after the opening parenthesis
+# ml = Malayalam
 
-no_space_before = Don't put a space before the closing parenthesis
+nl = Olandes
 
-no_space_before_dot = Don't put a space before the full stop
+no_space_after = Huwag lagyan ng espasyo pagkatapos ng pagbubukas ng panaklong
+
+no_space_before = Huwag lagyan ng espasyo bago ang pagsasara ng panaklong
+
+no_space_before_dot = Huwag lagyan ng espasyo bago ang tuldok
 
 # 3607406 +
 
-no_space_before_colon = Don't put a space before the colon
+# no_space_before_colon = Don't put a space before the colon
 
-no_space_before_semicolon = Don't put a space before the semicolon
+# no_space_before_semicolon = Don't put a space before the semicolon
 
-no_space_before_percentage = Don't put a space before the percentage
+# no_space_before_percentage = Don't put a space before the percentage
 
 # 3607406 -
 
-pl = Polish
+# pl = Polish
 
-repetition = Possible typo\: you repeated a word
+repetition = Posibleng typo\: inulit mo ang salita
 
-result1 = <br><b> {0}. Line {1}, column {2}</b><br>
+result1 = <br><b> {0}. Linya {1}, hanay {2}</b><br>
 
-resultAreaText = Results will appear here
+resultAreaText = Lalabas ang resulta rito
 
-resultTime = <br>Time\: {0}ms (including {1}ms for rule matching)<br>
+resultTime = <br>Oras\: {0}ms<br>
 
-ru = Russian
+# ru = Russian
 
-sk = Slovak
+# sk = Slovak
 
-sl = Slovenian
+# sl = Slovenian
 
-space_after_comma = Put a space after the comma, but not before the comma
+space_after_comma = Maglagay ng espasyo pagkatapos ng kuwit, pero hindi bago ang kuwit
 
-spelling = Possible spelling mistake found
+spelling = Posibleng may nahanap na mali sa ispeling
 
-startChecking = Starting check in {0}
+startChecking = Sinisimulan ang check sa {0}
 
-sv = Swedish
+# sv = Swedish
 
 tl = Tagalog
 
-textLanguage = Text Language\:
+textLanguage = Wika ng teksto\:
 
-two_commas = Two consecutive commas
+two_commas = Dalawang magkasunod na kuwit
 
-two_dots = Two consecutive dots
+two_dots = Dalawang magkasunod na tuldok
 
-uk = Ukrainian
+# uk = Ukrainian
 
-unpaired_brackets = Unpaired bracket or similar symbol
+unpaired_brackets = Walang kapares na bracket o kaparehong simbolo
 
-useGUIConfig = Use above settings for the server
+useGUIConfig = Gamitin ang nasa itaas na setting para sa server
 
-whitespace_repetition = Possible typo\: you repeated a whitespace
+whitespace_repetition = Posibleng typo\: naulit mo ang whitespace
 
-ro = Romanian
+ro = Romano
 
-zh = Chinese
+zh = Tsino
 
-moreInfo = More info\:
+moreInfo = Mas maraming impormasyon\:
 
-pt = Portuguese
+pt = Portuges
 
-pt-BR = Portuguese (Brazil)
+pt-BR = Portuges (Brazil)
 
-pt-PT = Portuguese (Portugal) 
+pt-PT = Portuges (Portugal)
 
-guiWarning = Warning
+guiWarning = Babala
 
-guiDuplicate = Duplicate rule file\!
+guiDuplicate = Doble ang rule file\!
 
-ja = Japanese
+ja = Hapon
 
-language_not_supported = Error\: Sorry, the document language "{0}" is not supported by LanguageTool.
+# language_not_supported = Error\: Sorry, the document language "{0}" is not supported by LanguageTool.
 
-http_server_start_failed = LanguageTool HTTP server could not be started on host "{0}", port {1}.\nMaybe something else is running on that port already?
+# http_server_start_failed = LanguageTool HTTP server could not be started on host "{0}", port {1}.\nMaybe something else is running on that port already?
 
-https_server_start_failed = LanguageTool HTTPS server could not be started on host "{0}", port {1}.\nMaybe something else is running on that port already?
+# https_server_start_failed = LanguageTool HTTPS server could not be started on host "{0}", port {1}.\nMaybe something else is running on that port already?
 
-https_server_start_failed_unknown_reason = LanguageTool HTTPS server could not be started on host "{0}", port {1}
+# https_server_start_failed_unknown_reason = LanguageTool HTTPS server could not be started on host "{0}", port {1}
 
-tray_menu_enable_server = Run HTTP server
+# tray_menu_enable_server = Run HTTP server
 
-tray_tooltip_server_running = LanguageTool (HTTP server running)
+# tray_tooltip_server_running = LanguageTool (HTTP server running)
+
+# guiMenuEdit = &Edit
+
+# guiMenuGrammar = &Text Checking
+
+# guiMenuSave = &Save
+
+# guiMenuSaveShortDesc = Save File
+
+# guiMenuSaveLongDesc = Save File
+
+# guiMenuSaveAs = Save &As
+
+# guiMenuSaveAsShortDesc = Save File As
+
+# guiMenuSaveAsLongDesc = Save File As
+
+# guiMenuCut = Cut
+
+# guiMenuCopy = Copy
+
+# guiMenuPaste = Paste
+
+# guiMenuSelectAll = Select All
+
+# guiMenuUndo = &Undo
+
+# guiMenuRedo = &Redo
+
+# autoCheckText = AutoCheck
+
+# autoCheckTextShortDesc = AutoCheck
+
+# autoCheckTextLongDesc = AutoCheck
+
+# guiActivateRule = Activate Rule
+
+# guiMore = More...
