--- a/languagetool-language-modules/uk/src/main/resources/org/languagetool/MessagesBundle_uk.properties
+++ b/languagetool-language-modules/uk/src/main/resources/org/languagetool/MessagesBundle_uk.properties
@@ -25,6 +25,10 @@ checkDone = \u0417\u043d\u0430\u0439\u0434\u0435\u043d\u043e {0} \u043f\u043e\u0
 
 checkText = \u041f\u0435\u0440\u0435\u0432\u0456\u0440\u0438\u0442\u0438 \u0442\u0435\u043a\u0441\u0442
 
+# checkTextShortDesc = Check Text
+
+# checkTextLongDesc = Check Text
+
 correctionMessage = \u0412\u0438\u043f\u0440\u0430\u0432\u043b\u0435\u043d\u043d\u044f\:
 
 cs = \u0427\u0435\u0441\u044c\u043a\u0430
@@ -149,6 +153,10 @@ guiMenuHelp = \u0414\u043e\u0432\u0456\u0434\u043a\u0430
 guiMenuHide = \u0421\u0445\u043e\u0432\u0430\u0442\u0438 \u0432 \u0441\u0438\u0441\u0442\u0435\u043c\u043d\u0438\u0439 \u043b\u043e\u0442\u043e\u043a
 
 guiMenuOpen = \u0412\u0456\u0434\u043a\u0440\u0438\u0442\u0438...
+
+# guiMenuOpenShortDesc = Open File
+
+# guiMenuOpenLongDesc = Open File
 
 guiMenuOptions = \u041f\u0430\u0440\u0430\u043c\u0435\u0442\u0440\u0438...
 
@@ -288,3 +296,41 @@ https_server_start_failed_unknown_reason = \u041d\u0435\u043c\u043e\u0436\u043b\
 tray_menu_enable_server = \u0417\u0430\u043f\u0443\u0441\u0442\u0438\u0442\u0438 Web-\u0441\u0435\u0440\u0432\u0435\u0440
 
 tray_tooltip_server_running = LanguageTool (HTTP-\u0441\u0435\u0440\u0432\u0435\u0440 \u0437\u0430\u043f\u0443\u0449\u0435\u043d\u043e)
+
+# guiMenuEdit = &Edit
+
+# guiMenuGrammar = &Text Checking
+
+# guiMenuSave = &Save
+
+# guiMenuSaveShortDesc = Save File
+
+# guiMenuSaveLongDesc = Save File
+
+# guiMenuSaveAs = Save &As
+
+# guiMenuSaveAsShortDesc = Save File As
+
+# guiMenuSaveAsLongDesc = Save File As
+
+# guiMenuCut = Cut
+
+# guiMenuCopy = Copy
+
+# guiMenuPaste = Paste
+
+# guiMenuSelectAll = Select All
+
+# guiMenuUndo = &Undo
+
+# guiMenuRedo = &Redo
+
+# autoCheckText = AutoCheck
+
+# autoCheckTextShortDesc = AutoCheck
+
+# autoCheckTextLongDesc = AutoCheck
+
+# guiActivateRule = Activate Rule
+
+# guiMore = More...
