--- a/languagetool-language-modules/zh/src/main/resources/org/languagetool/MessagesBundle_zh.properties
+++ b/languagetool-language-modules/zh/src/main/resources/org/languagetool/MessagesBundle_zh.properties
@@ -25,6 +25,10 @@ checkDone = \u68c0\u67e5\u5b8c\u6210\uff0c\u53d1\u73b0{0}\u4e2a\u6f5c\u5728\u95e
 
 checkText = &\u68c0\u67e5
 
+# checkTextShortDesc = Check Text
+
+# checkTextLongDesc = Check Text
+
 correctionMessage = \u6821\u6b63\uff1a
 
 cs = \u6377\u514b\u8bed
@@ -149,6 +153,10 @@ guiMenuHelp = &\u5e2e\u52a9
 guiMenuHide = &\u6700\u5c0f\u5316\u5230\u6258\u76d8
 
 guiMenuOpen = &\u6253\u5f00...
+
+# guiMenuOpenShortDesc = Open File
+
+# guiMenuOpenLongDesc = Open File
 
 guiMenuOptions = &\u9009\u9879...
 
@@ -288,3 +296,41 @@ https_server_start_failed_unknown_reason = LanguageTool HTTP\u670d\u52a1\u5668\u
 tray_menu_enable_server = \u542f\u52a8HTTP\u670d\u52a1\u5668
 
 tray_tooltip_server_running = LanguageTool (HTTP\u670d\u52a1\u5668\u6b63\u5728\u8fd0\u884c)
+
+# guiMenuEdit = &Edit
+
+# guiMenuGrammar = &Text Checking
+
+# guiMenuSave = &Save
+
+# guiMenuSaveShortDesc = Save File
+
+# guiMenuSaveLongDesc = Save File
+
+# guiMenuSaveAs = Save &As
+
+# guiMenuSaveAsShortDesc = Save File As
+
+# guiMenuSaveAsLongDesc = Save File As
+
+# guiMenuCut = Cut
+
+# guiMenuCopy = Copy
+
+# guiMenuPaste = Paste
+
+# guiMenuSelectAll = Select All
+
+# guiMenuUndo = &Undo
+
+# guiMenuRedo = &Redo
+
+# autoCheckText = AutoCheck
+
+# autoCheckTextShortDesc = AutoCheck
+
+# autoCheckTextLongDesc = AutoCheck
+
+# guiActivateRule = Activate Rule
+
+# guiMore = More...
