--- a/languagetool-language-modules/el/src/main/resources/org/languagetool/MessagesBundle_el_GR.properties
+++ b/languagetool-language-modules/el/src/main/resources/org/languagetool/MessagesBundle_el_GR.properties
@@ -25,6 +25,10 @@ checkDone = \u03a4\u03ad\u03bb\u03bf\u03c2 \u03b5\u03bb\u03ad\u03b3\u03c7\u03bf\
 
 checkText = &\u0388\u03bb\u03b5\u03b3\u03c7\u03bf\u03c2 \u03ba\u03b5\u03b9\u03bc\u03ad\u03bd\u03bf\u03c5
 
+# checkTextShortDesc = Check Text
+
+# checkTextLongDesc = Check Text
+
 correctionMessage = \u0394\u03b9\u03cc\u03c1\u03b8\u03c9\u03c3\u03b7\:
 
 cs = \u03a4\u03c3\u03b5\u03c7\u03b9\u03ba\u03ae
@@ -149,6 +153,10 @@ guiMenuHelp = &\u0392\u03bf\u03ae\u03b8\u03b5\u03b9\u03b1
 guiMenuHide = \u0391\u03c0\u03cc\u03ba\u03c1\u03c5\u03c8\u03b7 \u03c3\u03c4\u03b7\u03bd \u03c0\u03b5\u03c1\u03b9\u03bf\u03c7\u03ae \u03c3\u03c5\u03c3\u03c4\u03ae\u03bc\u03b1\u03c4\u03bf\u03c2
 
 guiMenuOpen = &\u0386\u03bd\u03bf\u03b9\u03b3\u03bc\u03b1
+
+# guiMenuOpenShortDesc = Open File
+
+# guiMenuOpenLongDesc = Open File
 
 guiMenuOptions = \u0395\u03c0\u03b9\u03bb\u03bf\u03b3\u03ad\u03c2
 
@@ -288,3 +296,41 @@ https_server_start_failed_unknown_reason = \u0391\u03b4\u03c5\u03bd\u03b1\u03bc\
 tray_menu_enable_server = \u0395\u03ba\u03ba\u03af\u03bd\u03b7\u03c3\u03b7 \u03b4\u03b9\u03b1\u03ba\u03bf\u03bc\u03b9\u03c3\u03c4\u03ae HTTP
 
 tray_tooltip_server_running = LanguageTool (\u03bf \u03b4\u03b9\u03b1\u03ba\u03bf\u03bc\u03b9\u03c3\u03c4\u03ae\u03c2 HTTP \u03b5\u03ba\u03c4\u03b5\u03bb\u03b5\u03af\u03c4\u03b1\u03b9)
+
+# guiMenuEdit = &Edit
+
+# guiMenuGrammar = &Text Checking
+
+# guiMenuSave = &Save
+
+# guiMenuSaveShortDesc = Save File
+
+# guiMenuSaveLongDesc = Save File
+
+# guiMenuSaveAs = Save &As
+
+# guiMenuSaveAsShortDesc = Save File As
+
+# guiMenuSaveAsLongDesc = Save File As
+
+# guiMenuCut = Cut
+
+# guiMenuCopy = Copy
+
+# guiMenuPaste = Paste
+
+# guiMenuSelectAll = Select All
+
+# guiMenuUndo = &Undo
+
+# guiMenuRedo = &Redo
+
+# autoCheckText = AutoCheck
+
+# autoCheckTextShortDesc = AutoCheck
+
+# autoCheckTextLongDesc = AutoCheck
+
+# guiActivateRule = Activate Rule
+
+# guiMore = More...
